--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "Name: fall, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,8 @@
    "source": [
     "\n",
     "nasa.fall.value_counts()\n",
-    "\n"
+    "\n",
+    "#nasa[fall].value_counts()"
    ]
   },
   {
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +436,7 @@
        "55      1  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,12 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "import xlrd\n",
+    "astronaut = pd.read_excel('astronauts.xls')\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -492,11 +495,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Birth Date</th>\n",
+       "      <th>Birth Place</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Alma Mater</th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>Graduate Major</th>\n",
+       "      <th>Military Rank</th>\n",
+       "      <th>Military Branch</th>\n",
+       "      <th>Space Flights</th>\n",
+       "      <th>Space Flight (hr)</th>\n",
+       "      <th>Space Walks</th>\n",
+       "      <th>Space Walks (hr)</th>\n",
+       "      <th>Missions</th>\n",
+       "      <th>Death Date</th>\n",
+       "      <th>Death Mission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joseph M. Acaba</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>1967-05-17</td>\n",
+       "      <td>Inglewood, CA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of California-Santa Barbara; Univer...</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3307</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>STS-119 (Discovery), ISS-31/32 (Soyuz)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Loren W. Acton</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1936-03-07</td>\n",
+       "      <td>Lewiston, MT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Montana State University; University of Colorado</td>\n",
+       "      <td>Engineering Physics</td>\n",
+       "      <td>Solar Physics</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>190</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS 51-F (Challenger)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>James C. Adamson</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1946-03-03</td>\n",
+       "      <td>Warsaw, NY</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; Princeton University</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Aerospace Engineering</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Army (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>334</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS-28 (Columbia), STS-43 (Atlantis)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thomas D. Akers</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1951-05-20</td>\n",
+       "      <td>St. Louis, MO</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of Missouri-Rolla</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>814</td>\n",
+       "      <td>4</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Buzz Aldrin</td>\n",
+       "      <td>1963.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1930-01-20</td>\n",
+       "      <td>Montclair, NJ</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; MIT</td>\n",
+       "      <td>Mechanical Engineering</td>\n",
+       "      <td>Astronautics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>289</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Gemini 12, Apollo 11</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Name    Year  Group   Status Birth Date    Birth Place Gender  \\\n",
+       "0   Joseph M. Acaba  2004.0   19.0   Active 1967-05-17  Inglewood, CA   Male   \n",
+       "1    Loren W. Acton     NaN    NaN  Retired 1936-03-07   Lewiston, MT   Male   \n",
+       "2  James C. Adamson  1984.0   10.0  Retired 1946-03-03     Warsaw, NY   Male   \n",
+       "3   Thomas D. Akers  1987.0   12.0  Retired 1951-05-20  St. Louis, MO   Male   \n",
+       "4       Buzz Aldrin  1963.0    3.0  Retired 1930-01-20  Montclair, NJ   Male   \n",
+       "\n",
+       "                                          Alma Mater     Undergraduate Major  \\\n",
+       "0  University of California-Santa Barbara; Univer...                 Geology   \n",
+       "1   Montana State University; University of Colorado     Engineering Physics   \n",
+       "2          US Military Academy; Princeton University             Engineering   \n",
+       "3                       University of Missouri-Rolla     Applied Mathematics   \n",
+       "4                           US Military Academy; MIT  Mechanical Engineering   \n",
+       "\n",
+       "          Graduate Major Military Rank         Military Branch  Space Flights  \\\n",
+       "0                Geology           NaN                     NaN              2   \n",
+       "1          Solar Physics           NaN                     NaN              1   \n",
+       "2  Aerospace Engineering       Colonel       US Army (Retired)              2   \n",
+       "3    Applied Mathematics       Colonel  US Air Force (Retired)              4   \n",
+       "4           Astronautics       Colonel  US Air Force (Retired)              2   \n",
+       "\n",
+       "   Space Flight (hr)  Space Walks  Space Walks (hr)  \\\n",
+       "0               3307            2              13.0   \n",
+       "1                190            0               0.0   \n",
+       "2                334            0               0.0   \n",
+       "3                814            4              29.0   \n",
+       "4                289            2               8.0   \n",
+       "\n",
+       "                                            Missions Death Date Death Mission  \n",
+       "0             STS-119 (Discovery), ISS-31/32 (Soyuz)        NaT           NaN  \n",
+       "1                              STS 51-F (Challenger)        NaT           NaN  \n",
+       "2               STS-28 (Columbia), STS-43 (Atlantis)        NaT           NaN  \n",
+       "3  STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...        NaT           NaN  \n",
+       "4                               Gemini 12, Apollo 11        NaT           NaN  "
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
+    "astronaut.head()\n",
     "\n"
    ]
   },
@@ -509,11 +711,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Physics                                                                35\n",
+       "Aerospace Engineering                                                  33\n",
+       "Mechanical Engineering                                                 30\n",
+       "Aeronautical Engineering                                               28\n",
+       "Electrical Engineering                                                 23\n",
+       "Engineering Science                                                    13\n",
+       "Engineering                                                            12\n",
+       "Mathematics                                                            11\n",
+       "Chemistry                                                              10\n",
+       "Naval Sciences                                                          9\n",
+       "Chemical Engineering                                                    9\n",
+       "Astronautical Engineering                                               8\n",
+       "Aeronautical & Astronautical Engineering                                6\n",
+       "Geology                                                                 5\n",
+       "Mathematics & Physics                                                   5\n",
+       "Civil Engineering                                                       5\n",
+       "Biology                                                                 5\n",
+       "Applied Science & Engineering                                           4\n",
+       "Physics & Astronomy                                                     4\n",
+       "Computer Science                                                        3\n",
+       "Applied Mathematics                                                     3\n",
+       "Aeronautics & Astronautics                                              3\n",
+       "Engineering Physics                                                     3\n",
+       "Zoology                                                                 2\n",
+       "Physics & Mathematics                                                   2\n",
+       "Engineering Mechanics                                                   2\n",
+       "Engineering Management                                                  2\n",
+       "Biological Science                                                      2\n",
+       "Ocean Engineering                                                       2\n",
+       "Education                                                               2\n",
+       "                                                                       ..\n",
+       "Business Management; Aeronautical Engineering                           1\n",
+       "Computer & Systems Engineering                                          1\n",
+       "Earth & Planetary Science                                               1\n",
+       "Human Biology                                                           1\n",
+       "Business Economics                                                      1\n",
+       "Astronautics                                                            1\n",
+       "Physical Science                                                        1\n",
+       "Electronics Engineering                                                 1\n",
+       "Solid Earth Sciences                                                    1\n",
+       "Applied Biology; Mechanical Engineering                                 1\n",
+       "Physics & Astronautical Engineering                                     1\n",
+       "Military Science                                                        1\n",
+       "Biology & Psychology                                                    1\n",
+       "Mechanical & Aeronautical Engineering                                   1\n",
+       "Mathematics & Economics                                                 1\n",
+       "Music                                                                   1\n",
+       "Mathematics; Russian                                                    1\n",
+       "Psychology                                                              1\n",
+       "Ecological Science                                                      1\n",
+       "Electrical Engineering; Computer Science                                1\n",
+       "Nuclear Engineering                                                     1\n",
+       "Chemistry; Physiological Optics                                         1\n",
+       "Physics & Engineering                                                   1\n",
+       "Aeronautics & Astronautics; Earth, Atmospheric & Planetary Sciences     1\n",
+       "Biochemistry                                                            1\n",
+       "Philosophy                                                              1\n",
+       "Physiology                                                              1\n",
+       "Economics                                                               1\n",
+       "Astronomy                                                               1\n",
+       "Molecular Biology                                                       1\n",
+       "Name: Undergraduate Major, Length: 83, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
+    "astronaut['Undergraduate Major'].value_counts()\n",
+    "\n",
     "\n"
    ]
   },
@@ -526,11 +801,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
+    "astronaut.to_csv('./astronaut1.tsv', index = False)\n",
     "\n"
    ]
   },
